Fixed getLast()